Fix static checker on GpsNavigationMessageStore and GPSTime

--- a/GNSSLogger/app/build.gradle
+++ b/GNSSLogger/app/build.gradle
@@ -21,6 +21,13 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+
+        checkTypes {
+            javaCompileOptions.annotationProcessorOptions.
+                    classNames.add("org.checkerframework.checker.nullness.NullnessChecker")
+            // You can pass options like so:
+            // javaCompileOptions.annotationProcessorOptions.arguments.put("warns", "")
+        }
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
